# junkan

./: .gitignore  404.html  Dockerfile  README.md  action.yml  index.html  jnkn.toml  mkdocs.yml  objects.inv  pyproject.toml  scores.json  sitemap.xml
.github/workflows/: docs-deploy.yml  jnkn_check.yml  junkan-analysis.yml
about/: index.html
changelog/: index.html
changelog/CHANGELOG/: index.html
cicd_date/design/: index.html
community/: index.html
community/code-of-conduct/: index.html
community/contributing/: index.html
community/development-setup/: index.html
community/release-process/: index.html
community/roadmap/: index.html
community/testing-guide/: index.html
docs/: ARCHITECTURE.md  about.md  index.md
docs/changelog/: index.md
docs/cicd_date/: design.md
docs/community/: contributing.md  development-setup.md  index.md  release-process.md
docs/getting-started/: example-repository.md  index.md  installation.md
docs/openlineage/: design.md
explanation/: index.html
getting-started/: index.html
getting-started/example-repository/: index.html
getting-started/first-ci-integration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
how-to/: index.html
legal/license/: index.html
legal/security-policy/: index.html
legal/third-party-licenses/: index.html
openlineage/design/: index.html
pyspark/design/: index.html
reference/: index.html
reference/cli/: index.html
reference/glossary/: index.html
reference/patterns/: index.html
scripts/: concat.py  debug_posthog.py  demo_cicd_gate.py  demo_cli.py  demo_git_diff.py  demo_openlineage.py  demo_pyspark_column_lineage.py  verify_e2e.sh  verify_epic2.sh
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/changelog/: index.html
site/community/: index.html
site/explanation/: index.html
site/getting-started/: index.html
site/how-to/: index.html
site/search/: search_index.json
site/tutorials/: index.html
src/jnkn/: __init__.py  models.py
src/jnkn/cli/: main.py  (+5 more)
src/junkan/: __init__.py  cli.py
tests/corpus/: README.md
tests/e2e_live/: payment_service.py
tests/utils/: score_corpus.py
tutorials/: index.html
(+325 files in other folders)
