[project]
name = "jnkn-monorepo"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false 

[tool.uv.workspace]
members = [
    "packages/jnkn-core",
    "packages/jnkn-mcp",
    "packages/jnkn-lsp",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-redirects",
    "mike",
]
